--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Privacy Policy-Asuka";
 }
 <h1>@ViewData["Title"]</h1>
-<h1>Asuka</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
